--- a/style.css
+++ b/style.css
@@ -11,22 +11,27 @@ body{
 }
 .maincontainer{
     position:absolute;
+    display: inline-block;
     width: 800px;
     height: 260px;
     background: none;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    /* border: solid 10px red; */
+    text-align: center;
+    /* display: inline-block; */
 }
 .card{
-    position: relative;
+    /* position: relative; */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 800px;
+    height: 260px;
     border-radius: 10px;
     transform-style: preserve-3d;
     transition: all 1s ease;
+    /* border: solid 10px red; */
   }
 
 
@@ -38,27 +43,27 @@ body{
     border: solid 5px purple;
     text-align: center;
     font-family: 'Anton', sans-serif;
-    font-size: 70px;
-    width:100%;
-    height:100%;
+    font-size: 50px;
+    width: 800px;
+    height: 260px;
     backface-visibility: hidden;
     overflow: hidden;
-    margin:auto;
-    margin-top: 100px;
-    padding:20px;
+    margin: auto;
+    margin-top:50px;
+    padding:10px;
 }
 .answer{
     position: absolute;
     border: solid 5px purple;
     text-align: center;
     font-family: 'Anton', sans-serif;
-    font-size: 70px;
-    width:100%;
-    height:100%;
+    font-size: 60px;
+    width: 800px;
+    height: 260px;
     backface-visibility: hidden;
     overflow: hidden;
     margin:auto;
-    margin-top: 100px;
+    margin-top: 50px;
     padding:20px;
     transform:rotateY(180deg);
 }
@@ -66,16 +71,17 @@ button {
     background-color: green;
     margin-top: 10px;
     margin-left: 400px;
-    color: black;
+    color: rgb(9, 9, 9);
     padding: 20px;
     text-align: center;
-    font-family: 'Anton', sans-serif;    
+    font-family: 'Anton', sans-serif; 
 }
 button:hover{
     transform: scale(1.1)
 }
-
-
-
+.choices{
+    display: inline-block;
+    display: flex;
+}
 
     
