--- a/style.css
+++ b/style.css
@@ -71,10 +71,11 @@ button {
     background-color: green;
     margin-top: 10px;
     /* margin-left: 400px; */
-    color: rgb(9, 9, 9);
+    color: black;
     padding: 20px;
     text-align: center;
     font-family: 'Anton', sans-serif; 
+    font-size: 20px;
     display: inline-block;
 }
 button:hover{
